DuPont DevSB/src/objects/BA_Push_Notification_Log__c.object
<CustomObject>
    <description>Stores push notifications mapping for each campaign corresponding to every user related to that campaign</description>
    <fields>
        <fullName>BA_Configuration__c</fullName>
        <label>BA Configuration</label>
        <referenceTo>BA_Configuration__c</referenceTo>
        <relationshipLabel>BA Push Notification Logs</relationshipLabel>
        <relationshipName>BA_Push_Notification_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsNotificationRead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates whether notification was read by the receiver or not</description>
        <label>Is Notification Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Push_Notification_Receiver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>indicates the user for which we have to show the notification bell on campaign list</description>
        <label>Push Notification Receiver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BA_Push_Notification_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BA Push Notification Log</label>
    <nameField>
        <displayFormat>PushNotification-{000000}</displayFormat>
        <label>Push Notification Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BA Push Notification Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>